--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lalrpop-util = "0.19.5"
+regex = "1.4.5"
+serde = "1.0.124"
+
+[build-dependencies]
+lalrpop = "0.19.5"
+
+[dev-dependencies]
+insta = "1.7.0"
