--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eyre = "0.6.5"
+fs-err = "2.5.0"
 lalrpop-util = "0.19.5"
 regex = "1.4.5"
 serde = "1.0.124"
