--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ fs-err = "2.5.0"
 lalrpop-util = "0.19.5"
 regex = "1.4.5"
 serde = "1.0.124"
+serde_json = "1.0.64"
 
 [build-dependencies]
 lalrpop = "0.19.5"
