--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ lalrpop = "0.19.5"
 
 [dev-dependencies]
 insta = "1.7.0"
+
+# We especialy need lalrpop to be fast
+[profile.dev.package."*"]
+opt-level = 3
