--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        name: Checkout
 
       - uses: actions-rs/toolchain@v1
+        name: Install Rust
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
@@ -27,19 +29,27 @@ jobs:
           components: rustfmt, clippy
 
       - uses: actions-rs/cargo@v1
+        name: Build
         with:
           command: build
 
       - uses: actions-rs/cargo@v1
+        name: Run Cargo Tests
         with:
           command: test
 
       - uses: actions-rs/cargo@v1
+        name: Format
+        # TODO: Check the fmt.sh has run
         with:
           command: fmt
           args: --all -- --check
 
       - uses: actions-rs/cargo@v1
+        name: Clippy
         with:
           command: clippy
           args: -- -D warnings
+
+      - run: ./test.py
+        name: Run e2e tests
