--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ fs-err = "2.5.0"
 lalrpop-util = { version = "0.19.5", features = ["lexer"] }
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
+slotmap = { version = "1.0.3", features = ["serde"] }
 
 [build-dependencies]
 lalrpop = "0.19.5"
