--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ lalrpop-util = { version = "0.19.5", features = ["lexer"] }
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
 slotmap = { version = "1.0.3", features = ["serde"] }
+wasm-bindgen = "0.2.74"
 
 [build-dependencies]
 lalrpop = "0.19.5"
