--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -19,8 +19,10 @@ jobs:
           components: rustfmt, clippy
       - run: cargo install wasm-pack just
       - run: just wasm
+      - run: mv playground/static public
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: ./playground/static
+          publish_dir: ./public
+          force_orphan: true
