--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -19,15 +19,7 @@ jobs:
           components: rustfmt, clippy
       # TODO: Maybe use https://github.com/actions-rs/install when its ready 
       # - run: cargo install wasm-pack just
-      - run: |
-        curl -OL https://github.com/casey/just/releases/download/v0.9.2/just-v0.9.2-x86_64-unknown-linux-musl.tar.gz
-        curl -OL https://github.com/rustwasm/wasm-pack/releases/download/v0.9.1/wasm-pack-v0.9.1-x86_64-unknown-linux-musl.tar.gz
-        tar xf wasm-pack-v0.9.1-x86_64-unknown-linux-musl.tar.gz
-        tar xf just-v0.9.2-x86_64-unknown-linux-musl.tar.gz
-        mkdir bin
-        mv wasm-pack-v0.9.1-x86_64-unknown-linux-musl/wasm-pack bin
-        mv just bin
-        PATH="$(pwd)/bin:$PATH"
+      - run: source ./scripts/ci.sh
       - run: just wasm
       - run: mv playground/static public
       - run: rm public/.gitignore
