--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,55 +1,55 @@
-on:
-  push:
-  pull_request:
-  schedule: [cron: "40 1 * * 1"]
+# on:
+#   push:
+#   pull_request:
+#   schedule: [cron: "40 1 * * 1"]
 
-name: CI
+# name: CI
 
-jobs:
-  ci:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust:
-          - stable
-          - beta
-          - nightly
-          # - 1.31.0  # MSRV
+# jobs:
+#   ci:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         rust:
+#           - stable
+#           - beta
+#           - nightly
+#           # - 1.31.0  # MSRV
 
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout
+#     steps:
+#       - uses: actions/checkout@v2
+#         name: Checkout
 
-      - uses: actions-rs/toolchain@v1
-        name: Install Rust
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
-          components: rustfmt, clippy
+#       - uses: actions-rs/toolchain@v1
+#         name: Install Rust
+#         with:
+#           profile: minimal
+#           toolchain: ${{ matrix.rust }}
+#           override: true
+#           components: rustfmt, clippy
 
-      - uses: actions-rs/cargo@v1
-        name: Build
-        with:
-          command: build
+#       - uses: actions-rs/cargo@v1
+#         name: Build
+#         with:
+#           command: build
 
-      - uses: actions-rs/cargo@v1
-        name: Run Cargo Tests
-        with:
-          command: test
+#       - uses: actions-rs/cargo@v1
+#         name: Run Cargo Tests
+#         with:
+#           command: test
 
-      - uses: actions-rs/cargo@v1
-        name: Format
-        # TODO: Check the fmt.sh has run
-        with:
-          command: fmt
-          args: --all -- --check
+#       - uses: actions-rs/cargo@v1
+#         name: Format
+#         # TODO: Check the fmt.sh has run
+#         with:
+#           command: fmt
+#           args: --all -- --check
 
-      - uses: actions-rs/cargo@v1
-        name: Clippy
-        with:
-          command: clippy
-          args: -- -D warnings
+#       - uses: actions-rs/cargo@v1
+#         name: Clippy
+#         with:
+#           command: clippy
+#           args: -- -D warnings
 
-      - run: ./test.py
-        name: Run e2e tests
+#       - run: ./test.py
+#         name: Run e2e tests
