--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -2,12 +2,12 @@ on:
   push:
     branches:
       - trunk
-  workflow_dispatch:
-    inputs:
-      debug_enabled:
-        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'     
-        required: false
-        default: false
+  # workflow_dispatch:
+  #   inputs:
+  #     debug_enabled:
+  #       description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'     
+  #       required: false
+  #       default: false
 
 name: Build Site
 
@@ -26,9 +26,9 @@ jobs:
       # TODO: Maybe use https://github.com/actions-rs/install when its ready 
       # - run: cargo install wasm-pack just
       - run: source ./scripts/ci.sh
-      - run: pwd; ls
-      - uses: mxschmitt/action-tmate@v3
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
+      # - run: pwd; ls
+      # - uses: mxschmitt/action-tmate@v3
+      #   if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
       - run: just wasm
       - run: mv playground/static public
       - run: rm public/.gitignore
