--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,7 @@ opt-level = 3
 
 [workspace]
 members = [
-    "./playground"
+    "./playground",
+    "./crates/parser",
+    "./crates/diagnostics",
 ]
