Fully move to external crates for parser and diagnostics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ repository = "https://github.com/aDotInTheVoid/skate/"
 
 [dependencies]
 codespan-reporting = "0.11.1"
+diagnostics = { path = "./crates/diagnostics" }
 eyre = "0.6.5"
 fs-err = "2.5.0"
 lalrpop-util = { version = "0.19.5", features = ["lexer"] }
+parser = { path = "./crates/parser" }
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
 slotmap = { version = "1.0.3", features = ["serde"] }
