--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ parser = { path = "./crates/parser" }
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
 slotmap = { version = "1.0.3", features = ["serde"] }
+value = { path = "./crates/value" }
 wasm-bindgen = "0.2.74"
 
 [build-dependencies]
@@ -35,4 +36,5 @@ members = [
     "./playground",
     "./crates/parser",
     "./crates/diagnostics",
+    "./crates/value",
 ]
