--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2018"
 
 [dependencies]
 compiler = { path = "../compiler" }
+diagnostics = { path = "../diagnostics" }
+eyre = "0.6.5"
 parser = { path = "../parser" }
+rt_common = { path = "../rt_common" }
 value = { path = "../value" }
