--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+camino = "1.0.4"
 compiler = { path = "../../crates/compiler" }
 diagnostics = { path = "../../crates/diagnostics" }
+eyre = "0.6.5"
+glob = "0.3.0"
 parser = { path = "../../crates/parser" }
 vm = { path = "../../crates/vm" }
