--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "runner"
+name = "trun"
 version = "0.1.0"
 edition = "2018"
 
@@ -12,4 +12,5 @@ diagnostics = { path = "../../crates/diagnostics" }
 eyre = "0.6.5"
 glob = "0.3.0"
 parser = { path = "../../crates/parser" }
+structopt = "0.3.22"
 vm = { path = "../../crates/vm" }
