--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -10,6 +10,7 @@ camino = "1.0.4"
 compiler = { path = "../../crates/compiler" }
 diagnostics = { path = "../../crates/diagnostics" }
 eyre = "0.6.5"
+fs-err = "2.6.0"
 glob = "0.3.0"
 parser = { path = "../../crates/parser" }
 structopt = "0.3.22"
