--- a/crates/value/Cargo.toml
+++ b/crates/value/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+enum-as-inner = "0.3.3"
 serde = { version = "1.0.126", features = ["derive"] }
 slotmap = { version = "1.0.3", features = ["serde"] }
