--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+codespan-reporting = "0.11.1"
 diagnostics = { path = "../diagnostics" }
 enum-as-inner = "0.3.3"
+itertools = "0.10.1"
 parser = { path = "../parser" }
 serde = { version = "1.0.126", features = ["derive"] }
 slotmap = { version = "1.0.3", features = ["serde"] }
