--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+codespan-reporting = "0.11.1"
 compiler = { path = "../compiler" }
 diagnostics = { path = "../diagnostics" }
 eyre = "0.6.5"
