--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -14,4 +14,5 @@ fs-err = "2.6.0"
 glob = "0.3.0"
 parser = { path = "../../crates/parser" }
 structopt = "0.3.22"
+threadpool = "1.8.1"
 vm = { path = "../../crates/vm" }
