--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,8 @@
-[package]
-name = "skate"
-version = "0.0.0"
-authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>"]
-edition = "2018"
-resolver = "2"
-description = "A Programing language for rapid iteration"
-license = "MIT/Apache-2.0"
-repository = "https://github.com/aDotInTheVoid/skate/"
-
-[dependencies]
-codespan-reporting = "0.11.1"
-diagnostics = { path = "./crates/diagnostics" }
-eyre = "0.6.5"
-fs-err = "2.6.0"
-parser = { path = "./crates/parser" }
-rt_common = { path = "crates/rt_common" }
-treewalk = { path = "./crates/treewalk" }
-value = { path = "./crates/value" }
-wasm-bindgen = "0.2.74"
-
-[build-dependencies]
-lalrpop = "0.19.5"
-
 [workspace]
+resolver = "2"
 members = [
-    "./cmd/tmp/crun",
+    "./cmd/skate",
+    "./cmd/skate-treewalk",
     "./crates/compiler",
     "./crates/diagnostics",
     "./crates/parser",
