--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 codespan-reporting = "0.11.1"
 console_error_panic_hook = "0.1.6"
-diagnostics = { path = "../crates/diagnostics" }
+diagnostics = { path = "../skate/diagnostics" }
 skate-treewalk = { path = "../cmd/skate-treewalk" }
 termcolor = "1.1.2"
 wasm-bindgen = "0.2.74"
