--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "./cmd/skate-treewalk",
     "./cmd/skate",
+    "./cmd/skatrace",
     "./playground",
     "./skate/compiler",
     "./skate/diagnostics",
